--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -3,16 +3,36 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   gap: 2rem;
+  height: 100vh;
+  // background: $linear-gradient-2;\
+
+
 
   &__container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 60%;
+    width: 70%;
+    height: 40%;
     padding-block: 2rem;
+    max-width: 80rem;
+    position: relative;
+    @include respond(tab-land){
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rebeccapurple;
+      height: max-content;
+    }
 
+    @include respond(phone){
+      border-radius: 0rem;
+      width: 100%;
+      margin-inline: 2rem;
+      max-width: 40rem;
+    }
     &__title {
       font-size: 2.5rem;
       color: $color-primary;
@@ -24,9 +44,24 @@
       width: 50%;
       gap: 2rem;
       background: $color-white;
-      border-radius:1rem;
+      border-radius: 1rem 0 0 1rem;
       border: 1px solid $color-primary;
       padding: 5rem;
+
+      @include respond(tab-land){
+        border-radius: 0rem;
+        width: 70%;
+      }
+      @include respond(tab-port){
+        border-radius: 0rem;
+        width: 80%;
+      }
+      @include respond(phone){
+        border-radius: 0rem;
+        width: 100%;
+      }
+
+    
 
       button {
         align-self: center;
@@ -51,6 +86,54 @@
           outline: none;
           border: 1px solid $color-primary;
         }
+      }
+    }
+
+    &__right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      
+      gap: 1rem;
+      background: $linear-gradient-2;
+      color: $color-white;
+      border-radius: 0 1rem 1rem 0;
+    
+
+      @include respond(tab-land){
+        border-radius:0rem;
+        padding: 1rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+      width: 70%;      }
+
+      @include respond(tab-port){
+        border-radius:0rem;
+        padding: 1rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+      width: 80%; 
+      }
+
+      @include respond(phone){
+        border-radius:0rem;
+        padding: 1rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+      width: 100%; 
+      }
+
+
+      &__title {
+        font-size: 4rem;
+      }
+
+      &__text {
+        font-size: 1.6rem;
+        width: 80%;
+        text-align: center;
       }
     }
   }
